--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <h1>Tela Cambodia</h1>
 <p><a href="https://175.100.47.12:3000/" target="_blank">Tela 271</a></p>
 <p><a href="https://103.101.83.5:3034" target="_blank">Tela TSK</a></p>
+<p><a href="https://103.101.83.5:3054" target="_blank">Tela Niroth</a></p>
 
 
 </body>
