--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 <body class="p-3 m-0 border-0 bd-example m-0 border-0">
 
+  
 
-
- <!-- Example Code Start-->
+  <!-- Example Code Start-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">MBA</a>
@@ -31,6 +31,12 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Categories</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -108,6 +114,88 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <!-- Example Code End -->
+
+
+    <!-- Example Code Start-->
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Stations</th>
+          <th scope="col">Anydesk</th>
+          <th scope="col">Locations</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        <tr>
+          <th scope="row">1</th>
+          <td><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3054" target="_blank">Tela Central Park Nitroth </a></td>
+          <td>123456789</td>
+          <td>Phnom Penh</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3047"target="_blank">Tela Svay Dangkom</a></td>
+          <td>123456789</td>
+          <td>Siem Reap</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3052"target="_blank">Tela Samki</a></td>
+          <td>123456789</td>
+          <td>Siem Reap</td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3056"target="_blank">Tela Toul Svay Prey</a></td>
+          <td>123456789</td>
+          <td>Phnom Penh</td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3008"target="_blank">Tela Kampong Thom</a></td>
+          <td>123456789</td>
+          <td>Kampong Thom</td>
+        </tr>
+        <tr>
+          <th scope="row">6</th>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3024"target="_blank">Tela Svay Por</a></td>
+          <td>123456789</td>
+          <td>Battambang</td>
+        </tr>
+        <tr>
+          <th scope="row">7</th>
+          <td><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3004"target="_blank">Tela Kampong Chnang</a></td>
+          <td>123456789</td>
+          <td>Kampong Chnang</td>
+        </tr>
+        <tr>
+          <th scope="row">8</th>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3034"target="_blank">Tela Toul Sangkae</a></td>
+          <td>123456789</td>
+          <td>Phnom Penh</td>
+        </tr>
+        <tr>
+          <th scope="row">9</th>
+          <td><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3053"target="_blank">Tela North Bridge</a></td>
+          <td>123456789</td>
+          <td>Phnom Penh</td>
+        </tr>
+        <tr>
+          <th scope="row">10</th>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3006"target="_blank">Tela Chamkamorn</a></td>
+          <td>123456789</td>
+          <td>Phnom Penh</td>
+        </tr>
+        <tr>
+          <th scope="row">10</th>
+          <td><a class="dropdown-item link-body-emphasis" href="https://175.100.47.12:3000"target="_blank">Tela 271</a></td>
+          <td>123456789</td>
+          <td>Phnom Penh</td>
+        </tr>
+      </tbody>
+    </table>
     <!-- Example Code End -->
 
  <!-- <h1>Tela Cambodia</h1>
@@ -285,7 +373,7 @@
             </div>
         </div>
         <div class="footer-2">
-            <p>© 2021 | Made with ❤️ by Mubashar Dev. All Rights Reserved.</p>
+            <p>© 2021 | MBA ENGINEERING CAMBODIA. All Rights Reserved.</p>
         </div>
     </footer>
     </div>
