--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       </div>
     </nav>
     <!-- Example Code End -->
-<!-- Example Code Start-->
-    <div id="carouselExampleCaptions" class="carousel slide">
+<!-- Slide Code Start-->
+    <!-- <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -113,16 +113,16 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-    </div>
-    <!-- Example Code End -->
+    </div> -->
+    <!-- Slide Code End -->
 
 
-    <!-- Example Code Start-->
+    <!-- Table Tela Code Start-->
     <table class="table">
       <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col">Stations</th>
+          <th scope="col">Tela</th>
           <th scope="col">Anydesk</th>
           <th scope="col">Locations</th>
         </tr>
@@ -130,7 +130,7 @@
       <tbody class="table-group-divider">
         <tr>
           <th scope="row">1</th>
-          <td><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3054" target="_blank">Tela Central Park Nitroth </a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3054" target="_blank">Tela Central Park Nitroth </a></td>
           <td>123456789</td>
           <td>Phnom Penh</td>
         </tr>
@@ -142,7 +142,7 @@
         </tr>
         <tr>
           <th scope="row">3</th>
-          <td><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3052"target="_blank">Tela Samki</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3052"target="_blank">Tela Samki</a></td>
           <td>123456789</td>
           <td>Siem Reap</td>
         </tr>
@@ -154,7 +154,7 @@
         </tr>
         <tr>
           <th scope="row">5</th>
-          <td><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3008"target="_blank">Tela Kampong Thom</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3008"target="_blank">Tela Kampong Thom</a></td>
           <td>123456789</td>
           <td>Kampong Thom</td>
         </tr>
@@ -166,7 +166,7 @@
         </tr>
         <tr>
           <th scope="row">7</th>
-          <td><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3004"target="_blank">Tela Kampong Chnang</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3004"target="_blank">Tela Kampong Chnang</a></td>
           <td>123456789</td>
           <td>Kampong Chnang</td>
         </tr>
@@ -178,7 +178,7 @@
         </tr>
         <tr>
           <th scope="row">9</th>
-          <td><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3053"target="_blank">Tela North Bridge</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3053"target="_blank">Tela North Bridge</a></td>
           <td>123456789</td>
           <td>Phnom Penh</td>
         </tr>
@@ -190,22 +190,76 @@
         </tr>
         <tr>
           <th scope="row">10</th>
-          <td><a class="dropdown-item link-body-emphasis" href="https://175.100.47.12:3000"target="_blank">Tela 271</a></td>
+          <td><a class="dropdown-item link-primary" href="https://175.100.47.12:3000"target="_blank">Tela 271</a></td>
           <td>123456789</td>
           <td>Phnom Penh</td>
         </tr>
       </tbody>
     </table>
-    <!-- Example Code End -->
+    <!-- Table Tela Code End -->
 
  <!-- <h1>Tela Cambodia</h1>
 <p><a href="https://175.100.47.12:3000/" target="_blank">Tela 271</a></p>
 <p><a href="https://103.101.83.5:3034" target="_blank">Tela TSK</a></p>
 <p><a href="https://103.101.83.5:3054" target="_blank">Tela Niroth</a></p> -->
 
+ <!-- Table Total Code Start-->
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Total</th>
+          <th scope="col">Anydesk</th>
+          <th scope="col">Locations</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        <tr>
+          <th scope="row">1</th>
+          <td><a class="dropdown-item link-body-emphasis" href="http://96.9.74.166:82" target="_blank">Total klaingleu </a></td>
+          <td>123456789</td>
+          <td>Sihanouk</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td><a class="dropdown-item link-body-emphasis" href="https://36.37.227.222:3000"target="_blank">Total Phnom Tamao</a></td>
+          <td>123456789</td>
+          <td>Takeo</td>
+      </tbody>
+    </table>
+    <!-- Table Total Code End -->
 
- <!-- Example Code Start-->
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+<!-- Table PTT Code Start-->
+    <table class="table">
+       <tr>
+          <th scope="col">#</th>
+          <th scope="col">PTT</th>
+          <th scope="col">Anydesk</th>
+          <th scope="col">Locations</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        <tr>
+          <th scope="row">1</th>
+          <td><a class="dropdown-item link-primary" href="http://36.37.128.58:3000" target="_blank">O'Cha</a></td>
+          <td>123456789</td>
+          <td>Battambang</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td><a class="dropdown-item link-primary" href="http://110.235.255.36:3000"target="_blank">PTT Veng Sreng Center</a></td>
+          <td>123456789</td>
+          <td>Phnom Penh</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3052"target="_blank">Tela Samki</a></td>
+          <td>123456789</td>
+          <td>Siem Reap</td>
+        </tr>
+    </table>
+ <!-- Card 1 Code Start-->
+    <!-- <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
         <div class="card">
           <svg aria-label="Placeholder: Image cap" class="bd-placeholder-img card-img-top" height="140" preserveAspectRatio="xMidYMid slice" role="img" width="100%" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
@@ -242,11 +296,11 @@
           </div>
         </div>
       </div>
-    </div>
-    <!-- Example Code End -->
+    </div> -->
+    <!-- Card 1 Code End -->
 
-     <!-- Example Code Start-->
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+     <!-- Card 2 Code Start-->
+    <!-- <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
         <div class="card">
           <svg aria-label="Placeholder: Image cap" class="bd-placeholder-img card-img-top" height="140" preserveAspectRatio="xMidYMid slice" role="img" width="100%" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
@@ -283,11 +337,11 @@
           </div>
         </div>
       </div>
-    </div>
-    <!-- Example Code End -->
+    </div> -->
+    <!-- Card 2 Code End -->
 
-     <!-- Example Code Start-->
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+     <!-- Card 3 Code Start-->
+    <!-- <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
         <div class="card">
           <svg aria-label="Placeholder: Image cap" class="bd-placeholder-img card-img-top" height="140" preserveAspectRatio="xMidYMid slice" role="img" width="100%" xmlns="http://www.w3.org/2000/svg"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
@@ -324,15 +378,14 @@
           </div>
         </div>
       </div>
-    </div>
-    <!-- Example Code End -->
+    </div> -->
+    <!-- Card 3 Code End -->
     <div>
       <footer>
         <div class="container" >
             <div class="col-1">
-                <img src="/logo.png" alt="">
-                <p>Follow my instagram channel named mubashar_dev to see more of such projects and other posts. Also
-                    Like and share these posts.Also follow me on Github and Linkedin. I hope you will like my content.
+                <img src="/logo.jpg" alt="">
+                <p>MBA Engineering and Construction (Cambodia) was formed in 2005 to serves the oil and gas operation then, our business has developed.
                 </p>
             </div>
             <div class="col-2">
@@ -349,12 +402,12 @@
             <div class="col-3">
                 <h3>Services</h3>
                 <ul>
-                    <li><a href="#">HTML</a></li>
-                    <li><a href="#">CSS</a></li>
-                    <li><a href="#">JavaScript</a></li>
-                    <li><a href="#">React</a></li>
-                    <li><a href="#">Python</a></li>
-                    <li><a href="#">C++</a></li>
+                    <li><a href="#">FCC</a></li>
+                    <li><a href="#">ATG</a></li>
+                    <li><a href="#">Dispensers</a></li>
+                    <li><a href="#">Jetty</a></li>
+                    <li><a href="#">Safty equipment</a></li>
+                    
                 </ul>
             </div>
             <div class="col-4">
