--- a/index.html
+++ b/index.html
@@ -216,13 +216,13 @@
       <tbody class="table-group-divider">
         <tr>
           <th scope="row">1</th>
-          <td><a class="dropdown-item link-body-emphasis" href="http://96.9.74.166:82" target="_blank">Total klaingleu </a></td>
+          <td><a class="dropdown-item link-primary" href="http://96.9.74.166:82" target="_blank">Total klaingleu </a></td>
           <td>123456789</td>
           <td>Sihanouk</td>
         </tr>
         <tr>
           <th scope="row">2</th>
-          <td><a class="dropdown-item link-body-emphasis" href="https://36.37.227.222:3000"target="_blank">Total Phnom Tamao</a></td>
+          <td><a class="dropdown-item link-primary" href="https://36.37.227.222:3000"target="_blank">Total Phnom Tamao</a></td>
           <td>123456789</td>
           <td>Takeo</td>
       </tbody>
@@ -251,12 +251,12 @@
           <td>123456789</td>
           <td>Phnom Penh</td>
         </tr>
-        <tr>
+        <!-- <tr>
           <th scope="row">3</th>
           <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3052"target="_blank">Tela Samki</a></td>
           <td>123456789</td>
           <td>Siem Reap</td>
-        </tr>
+        </tr> -->
     </table>
  <!-- Card 1 Code Start-->
     <!-- <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -385,10 +385,10 @@
         <div class="container" >
             <div class="col-1">
                 <img src="/logo.jpg" alt="">
-                <p>MBA Engineering and Construction (Cambodia) was formed in 2005 to serves the oil and gas operation then, our business has developed.
-                </p>
+                <!-- <p>MBA Engineering and Construction (Cambodia) was formed in 2005 to serves the oil and gas operation then, our business has developed.
+                </p> -->
             </div>
-            <div class="col-2">
+            <!-- <div class="col-2">
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -398,8 +398,8 @@
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Services</a></li>
                 </ul>
-            </div>
-            <div class="col-3">
+            </div> -->
+            <!-- <div class="col-3">
                 <h3>Services</h3>
                 <ul>
                     <li><a href="#">FCC</a></li>
@@ -409,7 +409,7 @@
                     <li><a href="#">Safty equipment</a></li>
                     
                 </ul>
-            </div>
+            </div> -->
             <div class="col-4">
                 <h3>Newsletter</h3>
                 <form>
