--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
                 Tela Cambodia ATG
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3054" target="_blank">Tela Nitroth </a></li>
-                <li><a class="dropdown-item link-primary" href="https://103.101.83.5:3047"target="_blank">Tela Svay Dangkom</a></li>
+                <li><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3154" target="_blank">Tela Nitroth </a></li>
+                <li><a class="dropdown-item link-primary" href="https://103.101.83.5:3147"target="_blank">Tela Svay Dangkom</a></li>
                 <li><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3052"target="_blank">Tela Samki</a></li>
-                <li><a class="dropdown-item link-primary" href="https://103.101.83.5:3056"target="_blank">Tela Toul Svay Prey</a></li>
+                <li><a class="dropdown-item link-primary" href="https://103.101.83.5:3156"target="_blank">Tela Toul Svay Prey</a></li>
                 <li><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3008"target="_blank">Tela Kampong Thom</a></li>
-                <li><a class="dropdown-item link-primary" href="https://103.101.83.5:3024"target="_blank">Tela Svay Por</a></li>
-                <li><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3004"target="_blank">Tela Kampong Chnang</a></li>
-                <li><a class="dropdown-item link-primary" href="https://103.101.83.5:3034"target="_blank">Tela Toul Sangkae</a></li>
-                <li><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3053"target="_blank">Tela North Bridge</a></li>
-                <li><a class="dropdown-item link-primary" href="https://103.101.83.5:3006"target="_blank">Tela Chamkamorn</a></li>
+                <li><a class="dropdown-item link-primary" href="https://103.101.83.5:3124"target="_blank">Tela Svay Por</a></li>
+                <li><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3104"target="_blank">Tela Kampong Chnang</a></li>
+                <li><a class="dropdown-item link-primary" href="https://103.101.83.5:3134"target="_blank">Tela Toul Sangkae</a></li>
+                <li><a class="dropdown-item link-body-emphasis" href="https://103.101.83.5:3153"target="_blank">Tela North Bridge</a></li>
+                <li><a class="dropdown-item link-primary" href="https://103.101.83.5:3106"target="_blank">Tela Chamkamorn</a></li>
                 <li><a class="dropdown-item link-body-emphasis" href="https://175.100.47.12:3000"target="_blank">Tela 271</a></li>
-                <li><a class="dropdown-item link-primary "href="#"target="_blank">Tela Dangkor</a></li>
+                <li><a class="dropdown-item link-primary "href="https://103.101.83.5:3118"target="_blank">Tela Dangkor</a></li>
                 <!-- <li><a class="dropdown-item" href="#">Another action</a></li> -->
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item badge text-bg-warning " href="#">Something else here</a></li>
@@ -122,78 +122,84 @@
       <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col">Tela</th>
-          <th scope="col">Anydesk</th>
+          <th scope="col">Tela - ATG</th>
+          <th scope="col">Tela - FCC</th>
           <th scope="col">Locations</th>
         </tr>
       </thead>
       <tbody class="table-group-divider">
         <tr>
           <th scope="row">1</th>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3154" target="_blank">Tela Central Park Nitroth </a></td>
           <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3054" target="_blank">Tela Central Park Nitroth </a></td>
-          <td>123456789</td>
           <td>Phnom Penh</td>
         </tr>
         <tr>
           <th scope="row">2</th>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3047"target="_blank">Tela Svay Dangkom</a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3147"target="_blank">Tela Svay Dangkom</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3047" target="_blank">Tela Svay Dangkom</a></td>
           <td>Siem Reap</td>
         </tr>
         <tr>
           <th scope="row">3</th>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3052"target="_blank">Tela Samki</a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3052"target="_blank">Tela Samki SR</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3052" target="_blank">Tela Samki SR</a></td></td>
           <td>Siem Reap</td>
         </tr>
         <tr>
           <th scope="row">4</th>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3056"target="_blank">Tela Toul Svay Prey</a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3156"target="_blank">Tela Toul Svay Prey</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3056" target="_blank">Tela Toul Svay Prey</a></td></td>
           <td>Phnom Penh</td>
         </tr>
         <tr>
           <th scope="row">5</th>
           <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3008"target="_blank">Tela Kampong Thom</a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3008" target="_blank">Tela Kampong Thom</a></td></td>
           <td>Kampong Thom</td>
         </tr>
         <tr>
           <th scope="row">6</th>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3024"target="_blank">Tela Svay Por</a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3124"target="_blank">Tela Svay Por</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3024" target="_blank">Tela Svay Por</a></td></td>
           <td>Battambang</td>
         </tr>
         <tr>
           <th scope="row">7</th>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3004"target="_blank">Tela Kampong Chnang</a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3104"target="_blank">Tela Kampong Chnang</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3004" target="_blank">Tela Kampong Chnang</a></td></td>
           <td>Kampong Chnang</td>
         </tr>
         <tr>
           <th scope="row">8</th>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3034"target="_blank">Tela Toul Sangkae</a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3134"target="_blank">Tela Toul Sangkae</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3034" target="_blank">Tela Toul Sangkae</a></td></td>
           <td>Phnom Penh</td>
         </tr>
         <tr>
           <th scope="row">9</th>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3053"target="_blank">Tela North Bridge</a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3153"target="_blank">Tela North Bridge</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3053" target="_blank">Tela North Bridge</a></td></td>
           <td>Phnom Penh</td>
         </tr>
         <tr>
           <th scope="row">10</th>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3006"target="_blank">Tela Chamkamorn</a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3106"target="_blank">Tela Chamkamorn</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3106" target="_blank">Tela Chamkamorn</a></td></td>
           <td>Phnom Penh</td>
         </tr>
         <tr>
-          <th scope="row">10</th>
-          <td><a class="dropdown-item link-primary" href="https://175.100.47.12:3000"target="_blank">Tela 271</a></td>
-          <td>123456789</td>
+          <th scope="row">11</th>
+          <td><a class="dropdown-item link-primary" href="https://175.100.47.12:3000"target="_blank">Tela Samki 271</a></td>
+          <td><a class="dropdown-item link-primary" href="https://175.100.47.12" target="_blank">Tela Samki 271</a></td></td>
           <td>Phnom Penh</td>
         </tr>
+         <tr>
+          <th scope="row">12</th>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3118"target="_blank">Tela Dangkor</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3018" target="_blank">Tela Dangkor</a></td></td>
+          <td>Phnom Penh</td>
+         </tr>
       </tbody>
     </table>
     <!-- Table Tela Code End -->
@@ -209,20 +215,20 @@
         <tr>
           <th scope="col">#</th>
           <th scope="col">Total</th>
-          <th scope="col">Anydesk</th>
+          <th scope="col">Other</th>
           <th scope="col">Locations</th>
         </tr>
       </thead>
       <tbody class="table-group-divider">
         <tr>
           <th scope="row">1</th>
-          <td><a class="dropdown-item link-primary" href="http://96.9.74.166:82" target="_blank">Total klaingleu </a></td>
+          <td><a class="dropdown-item link-body-emphasis" href="http://96.9.74.166:82" target="_blank">Total klaingleu </a></td>
           <td>123456789</td>
           <td>Sihanouk</td>
         </tr>
         <tr>
           <th scope="row">2</th>
-          <td><a class="dropdown-item link-primary" href="https://36.37.227.222:3000"target="_blank">Total Phnom Tamao</a></td>
+          <td><a class="dropdown-item link-body-emphasis" href="https://36.37.227.222:3000"target="_blank">Total Phnom Tamao</a></td>
           <td>123456789</td>
           <td>Takeo</td>
       </tbody>
@@ -234,7 +240,7 @@
        <tr>
           <th scope="col">#</th>
           <th scope="col">PTT</th>
-          <th scope="col">Anydesk</th>
+          <th scope="col">Other</th>
           <th scope="col">Locations</th>
         </tr>
       </thead>
@@ -245,18 +251,6 @@
           <td>123456789</td>
           <td>Battambang</td>
         </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td><a class="dropdown-item link-primary" href="http://110.235.255.36:3000"target="_blank">PTT Veng Sreng Center</a></td>
-          <td>123456789</td>
-          <td>Phnom Penh</td>
-        </tr>
-        <!-- <tr>
-          <th scope="row">3</th>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3052"target="_blank">Tela Samki</a></td>
-          <td>123456789</td>
-          <td>Siem Reap</td>
-        </tr> -->
     </table>
  <!-- Card 1 Code Start-->
     <!-- <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -385,10 +379,10 @@
         <div class="container" >
             <div class="col-1">
                 <img src="/logo.jpg" alt="">
-                <!-- <p>MBA Engineering and Construction (Cambodia) was formed in 2005 to serves the oil and gas operation then, our business has developed.
-                </p> -->
+                <p>MBA Engineering and Construction (Cambodia) was formed in 2005 to serves the oil and gas operation then, our business has developed.
+                </p>
             </div>
-            <!-- <div class="col-2">
+            <div class="col-2">
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -398,8 +392,8 @@
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Services</a></li>
                 </ul>
-            </div> -->
-            <!-- <div class="col-3">
+            </div>
+            <div class="col-3">
                 <h3>Services</h3>
                 <ul>
                     <li><a href="#">FCC</a></li>
@@ -409,7 +403,7 @@
                     <li><a href="#">Safty equipment</a></li>
                     
                 </ul>
-            </div> -->
+            </div>
             <div class="col-4">
                 <h3>Newsletter</h3>
                 <form>
