--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <!-- Example Code Start-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">MBA</a>
+        <a class="navbar-brand" href="#">MBA Engineering & Construction (Cambodia)</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
@@ -40,8 +40,8 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item dropdown">
+            </li> -->
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Tela Cambodia ATG
               </a>
@@ -58,11 +58,11 @@
                 <li><a class="dropdown-item link-primary" href="https://103.101.83.5:3106"target="_blank">Tela Chamkamorn</a></li>
                 <li><a class="dropdown-item link-body-emphasis" href="https://175.100.47.12:3000"target="_blank">Tela 271</a></li>
                 <li><a class="dropdown-item link-primary "href="https://103.101.83.5:3118"target="_blank">Tela Dangkor</a></li>
-                <!-- <li><a class="dropdown-item" href="#">Another action</a></li> -->
+                <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item badge text-bg-warning " href="#">Something else here</a></li>
               </ul>
-            </li>
+            </li> -->
             <!-- <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </li> -->
