--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/103ed24470.js" crossorigin="anonymous"></script>
-    <title>Tela Cambodia</title>
+    <title>Station</title>
     <!-- <link rel="styesheet" type="text/css" href="css/bootstrap.css"> -->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
   <!-- Example Code Start-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">MBA Engineering & Construction (Cambodia)</a>
+        <a class="navbar-brand" href="#"><img src="/logo.jpg" alt="" width="200" height="90"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -209,56 +209,49 @@
          </tr>
       </tbody>
     </table>
-    <!-- Table Tela Code End -->
-
- <!-- <h1>Tela Cambodia</h1>
-<p><a href="https://175.100.47.12:3000/" target="_blank">Tela 271</a></p>
-<p><a href="https://103.101.83.5:3034" target="_blank">Tela TSK</a></p>
-<p><a href="https://103.101.83.5:3054" target="_blank">Tela Niroth</a></p> -->
-
- <!-- Table Total Code Start-->
-    <table class="table">
+    <!-- <table class="table">
       <thead>
         <tr>
           <th scope="col">#</th>
           <th scope="col">Total</th>
-          <th scope="col">Other</th>
+          <th scope="col"></th>
           <th scope="col">Locations</th>
         </tr>
       </thead>
       <tbody class="table-group-divider">
         <tr>
           <th scope="row">1</th>
-          <td><a class="dropdown-item link-body-emphasis" href="http://96.9.74.166:82" target="_blank">Total klaingleu </a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="http://96.9.74.166:82" target="_blank">Total klaingleu </a></td>
+          <td><a class="dropdown-item link-primary" href="" target="_blank"></a></td>
           <td>Sihanouk</td>
         </tr>
         <tr>
           <th scope="row">2</th>
-          <td><a class="dropdown-item link-body-emphasis" href="https://36.37.227.222:3000"target="_blank">Total Phnom Tamao</a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="https://36.37.227.222:3000"target="_blank">Total Phnom Tamao</a></td>
+          <td></td>
           <td>Takeo</td>
+        </tr>
       </tbody>
-    </table>
+    </table> -->
     <!-- Table Total Code End -->
 
 <!-- Table PTT Code Start-->
-    <table class="table">
+    <!-- <table class="table">
        <tr>
           <th scope="col">#</th>
           <th scope="col">PTT</th>
-          <th scope="col">Other</th>
+          <th scope="col"></th>
           <th scope="col">Locations</th>
         </tr>
       </thead>
       <tbody class="table-group-divider">
         <tr>
           <th scope="row">1</th>
-          <td><a class="dropdown-item link-primary" href="https://36.37.128.58:3000" target="_blank">O'Cha</a></td>
-          <td>123456789</td>
+          <td><a class="dropdown-item link-primary" href="https://36.37.128.58:3000" target="_blank">O'Cha Battambang</a></td>
+          <td></td>
           <td>Battambang</td>
         </tr>
-    </table>
+    </table> -->
  <!-- Card 1 Code Start-->
     <!-- <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
@@ -384,32 +377,35 @@
     <div>
       <footer>
         <div class="container" >
-            <div class="col-1">
-                <img src="/logo.jpg" alt="">
-                <p>MBA Engineering and Construction (Cambodia) was formed in 2005 to serves the oil and gas operation then, our business has developed.
-                </p>
+            <div class="col-2">
+              <h3>3D Scanning</h3>
+                <img src="/3d.png" alt="" width="200" height="150">
+                <!-- <p>MBA Engineering and Construction (Cambodia) was formed in 2005 to serves the oil and gas operation then, our business has developed.
+                </p> -->
             </div>
             <div class="col-2">
-                <h3>Quick Links</h3>
-                <ul>
+                <h3>Fusion</h3>
+                <img src="/fcc.png" alt="" width="200" height="150">
+                <!-- <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Categories</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Services</a></li>
-                </ul>
+                </ul> -->
             </div>
             <div class="col-3">
-                <h3>Services</h3>
-                <ul>
+                <h3>Maglink LX4</h3>
+                <img src="/atg.jpg" alt="" width="200" height="150">
+                <!-- <ul>
                     <li><a href="#">FCC</a></li>
                     <li><a href="#">ATG</a></li>
                     <li><a href="#">Dispensers</a></li>
                     <li><a href="#">Jetty</a></li>
                     <li><a href="#">Safty equipment</a></li>
                     
-                </ul>
+                </ul> -->
             </div>
             <div class="col-4">
                 <h3>Newsletter</h3>
@@ -427,7 +423,9 @@
             </div>
         </div>
         <div class="footer-2">
-            <p>© 2021 | MBA ENGINEERING CAMBODIA. All Rights Reserved.</p>
+            <!-- <p>© 2021 | MBA ENGINEERING CAMBODIA. All Rights Reserved.</p> -->
+             <p>MBA Engineering and Construction (Cambodia) was formed in 2005 to serves the oil and gas operation then, our business has developed.
+                </p>
         </div>
     </footer>
     </div>
