--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Example Code Start-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/logo.jpg" alt="" width="200" height="90"></a>
+        <a class="navbar-brand" href="#"><p>MBA Engineering and Construction Cambodia Co., Ltd</p></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
