--- a/index.html
+++ b/index.html
@@ -379,13 +379,13 @@
         <div class="container" >
             <div class="col-2">
               <h3>3D Scanning</h3>
-                <img src="/3d.png" alt="" width="200" height="150">
+                <img src="images/3d.png" alt="" width="200" height="150">
                 <!-- <p>MBA Engineering and Construction (Cambodia) was formed in 2005 to serves the oil and gas operation then, our business has developed.
                 </p> -->
             </div>
             <div class="col-2">
                 <h3>Fusion</h3>
-                <img src="/fcc.png" alt="" width="200" height="150">
+                <img src="images/fcc.png" alt="" width="200" height="150">
                 <!-- <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -397,7 +397,7 @@
             </div>
             <div class="col-3">
                 <h3>Maglink LX4</h3>
-                <img src="/atg.jpg" alt="" width="200" height="150">
+                <img src="images/atg.jpg" alt="" width="200" height="150">
                 <!-- <ul>
                     <li><a href="#">FCC</a></li>
                     <li><a href="#">ATG</a></li>
