--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <div class="container" >
             <div class="col-2">
               <h3>3D Scanning</h3>
-                <img src="images/3d.png" alt="" width="200" height="150">
+                <img src="3d.png" alt="" width="200" height="150">
                 <!-- <p>MBA Engineering and Construction (Cambodia) was formed in 2005 to serves the oil and gas operation then, our business has developed.
                 </p> -->
             </div>
