--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Example Code Start-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><p>MBA Engineering and Construction Cambodia Co., Ltd</p></a>
+        <a class="navbar-brand" href="#"><img src="logo.jpg" alt="" width="200" height="150"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -385,7 +385,7 @@
             </div>
             <div class="col-2">
                 <h3>Fusion</h3>
-                <img src="images/fcc.png" alt="" width="200" height="150">
+                <img src="fcc.png" alt="" width="200" height="150">
                 <!-- <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -397,7 +397,7 @@
             </div>
             <div class="col-3">
                 <h3>Maglink LX4</h3>
-                <img src="images/atg.jpg" alt="" width="200" height="150">
+                <img src="atg.jpg" alt="" width="200" height="150">
                 <!-- <ul>
                     <li><a href="#">FCC</a></li>
                     <li><a href="#">ATG</a></li>
